removed a line that didn't work. trying to solve missing margin underneath contact panel (only missing on mobile)

--- a/src/components/ContactPanel.css
+++ b/src/components/ContactPanel.css
@@ -16,7 +16,6 @@
     position: absolute;
     top: 5vh;
     left: 5vh;
-    bottom: 5vh;
     width: calc(100vw - 10vh);
     height: 90vh;
     display: flex;
